<resources>
    <string name="app_name">易寶 Treasure</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_hint">搜尋 品牌,型號</string>
    <string name="action_search">Search</string>
    <string name="action_settings">設定</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_camera">相機鏡頭</string>
    <string name="nav_item_tablet">平板電腦</string>
    <string name="nav_item_smartphone">智能手機</string>
    <string name="nav_item_vgame">電子遊戲機</string>
    <string name="nav_item_earphone">耳機</string>
    <string name="nav_item_notebook">手提電腦</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_camera</item>
        <item>@string/nav_item_tablet</item>
        <item>@string/nav_item_smartphone</item>
        <item>@string/nav_item_vgame</item>
    </string-array>
    <string name="username">帳户名稱</string>
    <string name="pwd">密碼</string>
    <string name="email">電郵地址</string>
    <string name="phone">電話號碼</string>
    <string name="location">最方便交易地點</string>
    <string name="register">註冊</string>
    <string name="confirm">確認密碼</string>
    <string name="gender">性別</string>
    <string name="female">女性</string>
    <string name="male">男性</string>
    <string name="title_Camera">數碼相機</string>
    <string name="title_Tablet">平板電腦</string>
    <string name="title_activity_login">登入</string>
    <string name="logout">登出</string>
    <string name="gadget_name">出售物品名稱</string>
    <string name="gadget_price">售價</string>
    <string name="color">顏色</string>
    <string name="scratch">刮花</string>
    <string name="available">放售中</string>
    <string name="hold">已被預訂</string>
    <string name="not_available">已出售</string>
    <string-array name="scratches">
        <item>前方</item>
        <item>後方</item>
        <item>左方</item>
        <item>右方</item>
        <item>上方</item>
        <item>下方</item>
        <item>沒有</item>
    </string-array>
    <string name="gadget_warranty">保養期(以月份計算)</string>
    <string name="gadget_type">物品類型</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string-array name="colors">
        <item>黑色</item>
        <item>藍色	</item>
        <item>啡色</item>
        <item>綠色</item>
        <item>金色</item>
        <item>黃色</item>
        <item>白色</item>
        <item>粉紅色</item>
        <item>紫色</item>
        <item>橙色</item>
    </string-array>
    <string-array name="productType">
        <item>@string/nav_item_smartphone</item>
        <item>@string/nav_item_earphone</item>
        <item>@string/nav_item_camera</item>
        <item>@string/nav_item_tablet</item>
        <item>@string/nav_item_vgame</item>
        <item>@string/nav_item_notebook</item>
    </string-array>
    <string name="brand">品牌</string>
    <string name="model">型號</string>
    <string-array name="shure">
        <item>SE215</item>
        <item>SE315</item>
        <item>SE415</item>
    </string-array>
    <string name="westone">Westone</string>
    <string name="beats">Beats</string>
    <string name="ue">Ultimate Ears</string>
    <string-array name="epBrand">
        <item>@string/shure</item>
        <item>@string/westone</item>
        <item>@string/beats</item>
        <item>@string/ue</item>
    </string-array>
    <string-array name="shureModel">
        <item>"SE112m+"</item>
        <item>"SE112"</item>
        <item>"SE215"</item>
        <item>"SE215SPE"</item>
        <item>"SE315"</item>
        <item>"SE425"</item>
        <item>"SE535"</item>
        <item>"SE535LTD"</item>
        <item>"SE846"</item>
    </string-array>
    <string name="gname">物品名稱</string>
    <string name="gprice">售價</string>
    <string name="gwarranty">保養期內</string>
    <string name="glocation">交易地點</string>
    <string-array name="mtr">
        <item>"觀塘綫"</item>
        <item>"荃灣綫"</item>
        <item>"港島綫"</item>
        <item>"將軍澳綫"</item>
        <item>"機場快綫"</item>
        <item>"東涌綫"</item>
        <item>"迪士尼綫"</item>
        <item>"東鐵綫"</item>
        <item>"馬鞍山綫"</item>
        <item>"西鐵綫"</item>
    </string-array>
    <string-array name="uni">
        <item>"香港大學"</item>
        <item>"香港中文大學"</item>
        <item>"香港科技大學"</item>
        <item>"香港城市大學"</item>
        <item>"香港理工大學"</item>
        <item>"香港浸會大學"</item>
        <item>"香港教育學院"</item>
        <item>嶺南大學</item>
        <item>香港公開大學</item>
        <item>香港演藝學院</item>
        <item>"香港樹仁大學"</item>
        <item>"恆生管理學院"</item>
        <item>珠海學院</item>
        <item>明愛專上學院</item>
        <item>東華學院</item>
        <item>明德學院</item>
        <item>香港能仁專上學院</item>
        <item>港專學院</item>
        <item>宏恩基督教學院</item>
    </string-array>
    <string-array name="hkIsland">
        <item>"西環"</item>
        <item>"堅尼地城"</item>
        <item>"西營盤"</item>
        <item>"中環"</item>
        <item>"上環"</item>
        <item>"金鐘"</item>
        <item>"灣仔"</item>
        <item>"銅鑼灣"</item>
        <item>"天后"</item>
    </string-array>
    <string-array name="kowloon">
        <item>"油麻地"</item>
        <item>"旺角"</item>
        <item>"尖沙咀"</item>
        <item>"深水埗"</item>
        <item>"觀塘"</item>
        <item>"土瓜灣"</item>
        <item>"黃大仙"</item>
        <item>"彩虹"</item>
        <item>"鑽石山"</item>
    </string-array>
    <string-array name="nt">
        <item>"元朗"</item>
        <item>"屯門"</item>
        <item>"荃灣"</item>
        <item>"青衣"</item>
        <item>"天水圍"</item>
    </string-array>
    <string-array name="oIsland">
        <item>"大嶼山"</item>
        <item>"長州"</item>
        <item>"南丫島"</item>
        <item>"梅窩"</item>
    </string-array>
    <string-array name="locationMenu">
        <item>@string/mtr</item>
        <item>@string/uni</item>
        <item>@string/hkIsland</item>
        <item>@string/kowloon</item>
        <item>@string/nt</item>
        <item>@string/oIsland</item>
    </string-array>
    <string-array name="ktl">
        <item>全線</item>
        <item>"調景嶺"</item>
        <item>"油塘"</item>
        <item>"藍田"</item>
        <item>"觀塘"</item>
        <item>"牛頭角"</item>
        <item>"九龍灣"</item>
        <item>"彩虹"</item>
        <item>"鑽石山"</item>
        <item>"黃大仙"</item>
        <item>"樂富"</item>
        <item>"九龍塘"</item>
        <item>"石硤尾"</item>
        <item>"太子"</item>
        <item>"旺角"</item>
        <item>"油麻地"</item>
    </string-array>
    <string-array name="twl">
        <item>全線</item>
        <item>"荃灣"</item>
        <item>"大窩口"</item>
        <item>"葵興"</item>
        <item>"葵芳"</item>
        <item>"茘景"</item>
        <item>"美孚"</item>
        <item>"茘枝角"</item>
        <item>"長沙灣"</item>
        <item>"深水埗"</item>
        <item>"太子"</item>
        <item>"旺角"</item>
        <item>"油麻地"</item>
        <item>"佐敦"</item>
        <item>"尖沙咀"</item>
        <item>"金鐘"</item>
        <item>"中環"</item>
    </string-array>
    <string-array name="isl">
        <item>全線</item>
        <item>"柴灣"</item>
        <item>"杏花邨"</item>
        <item>"筲箕灣"</item>
        <item>"西灣河"</item>
        <item>"太古"</item>
        <item>"鰂魚涌"</item>
        <item>"北角"</item>
        <item>"炮台山"</item>
        <item>"天后"</item>
        <item>"銅鑼灣"</item>
        <item>"灣仔"</item>
        <item>"金鐘"</item>
        <item>"中環"</item>
        <item>"上環"</item>
        <item>"西營盤"</item>
        <item>"香港大學"</item>
        <item>"堅尼地城"</item>
    </string-array>
    <string-array name="tcl">
        <item>全線</item>
        <item>"東涌"</item>
        <item>"欣澳"</item>
        <item>"青衣"</item>
        <item>"荔景"</item>
        <item>"南昌"</item>
        <item>"奧運"</item>
        <item>"九龍"</item>
        <item>"香港"</item>
    </string-array>
    <string-array name="ael">
        <item>全線</item>
        <item>"博覽館"</item>
        <item>"機場"</item>
        <item>"青衣"</item>
        <item>"九龍"</item>
        <item>"香港"</item>
    </string-array>
    <string-array name="tkl">
        <item>全線</item>
        <item>"北角"</item>
        <item>"鰂魚涌"</item>
        <item>"油塘"</item>
        <item>"調景嶺"</item>
        <item>"將軍澳"</item>
        <item>"坑口"</item>
        <item>"寶琳"</item>
        <item>"康城"</item>
    </string-array>
    <string-array name="drl">
        <item>全線</item>
        <item>"欣澳"</item>
        <item>"迪士尼"</item>
    </string-array>
    <string-array name="erl">
        <item>全線</item>
        <item>"紅磡"</item>
        <item>"旺角東"</item>
        <item>"九龍塘"</item>
        <item>"大圍"</item>
        <item>"沙田"</item>
        <item>"火炭"</item>
        <item>"馬場"</item>
        <item>"大學"</item>
        <item>"大埔墟"</item>
        <item>"太和"</item>
        <item>"粉嶺"</item>
        <item>"上水"</item>
        <item>"羅湖"</item>
        <item>"落馬洲"</item>
    </string-array>
    <string-array name="wrl">
        <item>全線</item>
        <item>"紅磡"</item>
        <item>"尖東"</item>
        <item>"柯士甸"</item>
        <item>"南昌"</item>
        <item>"美孚"</item>
        <item>"荃灣西"</item>
        <item>"錦上路"</item>
        <item>"元朗"</item>
        <item>"朗屏"</item>
        <item>"天水圍"</item>
        <item>"兆康"</item>
        <item>"屯門"</item>
    </string-array>
    <string-array name="mol">
        <item>全線</item>
        <item>"烏溪沙"</item>
        <item>"馬鞍山"</item>
        <item>"恆安"</item>
        <item>"大水坑"</item>
        <item>"石門"</item>
        <item>"第一城"</item>
        <item>"沙田圍"</item>
        <item>"車公廟"</item>
        <item>"大圍"</item>
    </string-array>
    <string-array name="ktlt">
        <item>"調景嶺"</item>
        <item>"油塘"</item>
        <item>"藍田"</item>
        <item>"觀塘"</item>
        <item>"牛頭角"</item>
        <item>"九龍灣"</item>
        <item>"彩虹"</item>
        <item>"鑽石山"</item>
        <item>"黃大仙"</item>
        <item>"樂富"</item>
        <item>"九龍塘"</item>
        <item>"石硤尾"</item>
        <item>"太子"</item>
        <item>"旺角"</item>
        <item>"油麻地"</item>
    </string-array>
    <string-array name="twlt">
        <item>"荃灣"</item>
        <item>"大窩口"</item>
        <item>"葵興"</item>
        <item>"葵芳"</item>
        <item>"茘景"</item>
        <item>"美孚"</item>
        <item>"茘枝角"</item>
        <item>"長沙灣"</item>
        <item>"深水埗"</item>
        <item>"太子"</item>
        <item>"旺角"</item>
        <item>"油麻地"</item>
        <item>"佐敦"</item>
        <item>"尖沙咀"</item>
        <item>"金鐘"</item>
        <item>"中環"</item>
    </string-array>
    <string-array name="islt">
        <item>"柴灣"</item>
        <item>"杏花邨"</item>
        <item>"筲箕灣"</item>
        <item>"西灣河"</item>
        <item>"太古"</item>
        <item>"鰂魚涌"</item>
        <item>"北角"</item>
        <item>"炮台山"</item>
        <item>"天后"</item>
        <item>"銅鑼灣"</item>
        <item>"灣仔"</item>
        <item>"金鐘"</item>
        <item>"中環"</item>
        <item>"上環"</item>
        <item>"西營盤"</item>
        <item>"香港大學"</item>
        <item>"堅尼地城"</item>
    </string-array>
    <string-array name="tclt">
        <item>"東涌"</item>
        <item>"欣澳"</item>
        <item>"青衣"</item>
        <item>"荔景"</item>
        <item>"南昌"</item>
        <item>"奧運"</item>
        <item>"九龍"</item>
        <item>"香港"</item>
    </string-array>
    <string-array name="aelt">
        <item>"博覽館"</item>
        <item>"機場"</item>
        <item>"青衣"</item>
        <item>"九龍"</item>
        <item>"香港"</item>
    </string-array>
    <string name="choose_location">請選擇交易地點</string>
    <string name="title_activity_register">註冊</string>
    <string name="MON">星期一</string>
    <string name="TUE">星期二</string>
    <string name="WED">星期三</string>
    <string name="THU">星期四</string>
    <string name="FRI">星期五</string>
    <string name="SAT">星期六</string>
    <string name="SUN">星期日</string>
</resources>