<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_smartphone" android:icon="@mipmap/ic_iphone"
            android:title="@string/nav_item_smartphone" />
        <item android:id="@+id/nav_tablet" android:icon="@mipmap/ic_tablet"
            android:title="@string/nav_item_tablet" />
        <item android:id="@+id/nav_earphone" android:icon="@mipmap/ic_earphone"
            android:title="@string/nav_item_earphone" />
        <item android:id="@+id/nav_camera" android:icon="@mipmap/ic_camera"
            android:title="@string/nav_item_camera" />
        <item android:id="@+id/nav_games" android:icon="@mipmap/ic_vgame"
            android:title="@string/nav_item_vgame" />
    </group>

    <item android:title="會員">
        <menu>
            <item android:id="@+id/nav_login" android:icon="@mipmap/ic_login"
                android:title="@string/title_activity_login" />
            <item android:id="@+id/nav_register" android:icon="@mipmap/ic_register"
                android:title="@string/title_activity_register" />
        </menu>
    </item>

</menu>