<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newLinearLayout"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/MondayNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MON" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/TuesdayNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TUE" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/WednesdayNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WED" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/ThursdayNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/THU" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/FridayNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FRI" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/SaturdayNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SAT" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/SundayNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SUN" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="由"
            android:textColor="#c2c1c1"
            android:textSize="14sp" />

        <Button
            android:id="@+id/mTimeStartButtonNew"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="至"
            android:textColor="#c2c1c1"
            android:textSize="14sp" />

        <Button
            android:id="@+id/mTimeEndButtonNew"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:text="@string/choose_location"
            android:textColor="#c2c1c1" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/locationSpinnerNew"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/mtr"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

        </android.support.v7.widget.AppCompatSpinner>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/locationSpecificSpinnerNew"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/mtr"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">

        </android.support.v7.widget.AppCompatSpinner>
    </LinearLayout>
    <Button
        android:id="@+id/delViewBtn"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="按此刪除第二交易日子時間地點組合"
        android:textColor="@color/tabsScrollColor" />

</LinearLayout>
