<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingTop="100dp">

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gadget_type" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/productType"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/productType"
            android:paddingTop="20dp"></android.support.v7.widget.AppCompatSpinner>

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/productBrand"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/epBrand"
            android:paddingTop="20dp"></android.support.v7.widget.AppCompatSpinner>

        <TextView
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/productModel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/shureModel"
            android:paddingTop="20dp"></android.support.v7.widget.AppCompatSpinner>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gwarranty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/gadget_warranty"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gwarranty"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingTop="10dp">

                <RadioButton
                    android:id="@+id/noButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/no"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/yesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/yes"
                    android:textSize="15sp" />

            </RadioGroup>
        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/gprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gadget_price"
                android:inputType="numberDecimal"
                android:paddingTop="20dp"
                android:textColor="@color/colorPrimary" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <ImageButton
                android:id="@+id/addCameraBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image"
                android:background="@mipmap/ic_add_photo" />

            <ImageButton
                android:id="@+id/addGalleryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image"
                android:layout_toRightOf="@+id/addCameraBtn"
                android:background="@mipmap/ic_collection" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_border" />

            <ImageView
                android:id="@+id/imageToUpload"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="10dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <ImageButton
                android:id="@+id/addCameraBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image2"
                android:background="@mipmap/ic_add_photo" />

            <ImageButton
                android:id="@+id/addGalleryBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image2"
                android:layout_toRightOf="@+id/addCameraBtn2"
                android:background="@mipmap/ic_collection" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_border" />

            <ImageView
                android:id="@+id/imageToUpload2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="10dp" />
        </RelativeLayout>


        <EditText
            android:id="@+id/etUploadName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="photo name" />

        <Button
            android:id="@+id/bUploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Upload Image" />


    </LinearLayout>


</ScrollView>